--- a/src/assets/css/searchBar.css
+++ b/src/assets/css/searchBar.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
 }
 
 .search input,
@@ -64,11 +64,6 @@ option {
 
 @media (max-width: 940px){
   button{
-    /* display: inline-block; */
-    /* display: flex; */
-    /* justify-content: center;
-    align-items: center; */
-    /* text-align: center; */
     margin: 0.8rem auto;
     display: block;
   }
