--- a/src/assets/css/rentalUnit.css
+++ b/src/assets/css/rentalUnit.css
@@ -7,11 +7,11 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.image {
+.RentalUnit .image {
   position: relative;
 }
 
-.image::before {
+.RentalUnit .image::before {
   content: '';
   background: rgb(2, 0, 36);
   background: linear-gradient(
@@ -28,18 +28,18 @@
   height: 100%;
 }
 
-.image,
-img {
+.RentalUnit .image,
+.RentalUnit img {
   width: 100%;
   height: 17rem;
   overflow: hidden;
 }
 
-img {
+.RentalUnit img {
   object-fit: cover;
 }
 
-.cost {
+.RentalUnit .cost {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 1.6rem;
   font-weight: bold;
@@ -49,19 +49,19 @@ img {
   color: white;
 }
 
-.small {
+.RentalUnit .small {
   display: inline;
   font-size: 1rem;
   font-weight: lighter;
 }
 
-.description {
+.RentalUnit .description {
   padding: 1rem;
   height: 11rem;
   position: relative;
 }
 
-.title {
+.RentalUnit .title {
   font-size: 1.5rem;
   font-weight: bold;
   color: #494949;
@@ -69,12 +69,12 @@ img {
   margin-bottom: 0.5rem;
 }
 
-.address {
+.RentalUnit .address {
   margin: 0.3rem 0rem;
 }
 
-.fa-map-marker-alt,
-.fa-home {
+.RentalUnit .fa-map-marker-alt,
+.RentalUnit .fa-home {
   width: 1.8rem;
   color: #b881fcb2;
 }
@@ -83,7 +83,7 @@ img {
   color: #b881fc;
 }
 
-.icon {
+.RentalUnit .icon {
   width: calc(100% - 2rem);
   display: flex;
   align-items: flex-end;
@@ -93,12 +93,12 @@ img {
   bottom: 0;
 }
 
-.comment {
+.RentalUnit .comment {
   color: #666666;
   font-style: italic;
 }
 
-.fa-heart {
+.RentalUnit .fa-heart {
   font-size: 2rem;
   /* color: #fc332d; */
   color: #b881fc;
@@ -107,7 +107,7 @@ img {
   transition: 0.3s;
 }
 
-.fa-heart:hover {
+.RentalUnit .fa-heart:hover {
   background-color: #b881fc63;
   transition: 0.3s;
 }
