--- a/src/assets/css/pagination.css
+++ b/src/assets/css/pagination.css
@@ -13,6 +13,10 @@
     width: 3rem;
 }
 
+.Pagination .click{
+    background-color: red;
+}
+
 .Pagination li{
     margin: 0.2rem;
     text-align: center;
