--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -1,10 +1,12 @@
 .Footer{
-    background-color: #7a5f9c62;
+    background-color: #34214e88;
     padding: 2rem 1rem;
 }
 
 .Footer .col-container{
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .Footer h3{
