create config file for styling and modify css file use variable

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   padding: 0;
   list-style: none;
   outline: none;
-  font-family: roboto, sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 a{
   text-decoration: none;
