--- a/src/assets/css/detailRentalUnit.css
+++ b/src/assets/css/detailRentalUnit.css
@@ -1,7 +1,9 @@
+@import 'config.css';
+
 .modal {
-  background-color: white;
-  width: 90vw;
-  height: 90vh;
+  background-color: var(--modal-bgcolor);
+  width: var(--modal-width);
+  height: var(--modal-height);
   position: relative;
 }
 
@@ -25,8 +27,8 @@
   transition: 0.3s;
 }
 .DetailRentalUnit .main {
-  width: 90vw;
-  max-width: 70rem;
+  width: var(--detail-rental-width);
+  max-width: var(--detail-rental-max-width);
   margin: auto;
   color: #333333;
 }
