--- a/src/assets/css/rentalUnit.css
+++ b/src/assets/css/rentalUnit.css
@@ -1,7 +1,9 @@
+@import 'config.css';
+
 .RentalUnit {
   display: inline-block;
-  width: 24rem;
-  height: 37rem;
+  width: var(--rental-unit-width);
+  height: var(--rental-unit-height);
   margin: 1rem;
   margin-bottom: 2.5rem;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -31,7 +33,7 @@
 .RentalUnit .image,
 .RentalUnit img {
   width: 100%;
-  height: 17rem;
+  height: var(--rental-unit-image-height);
   overflow: hidden;
 }
 
@@ -40,7 +42,7 @@
 }
 
 .RentalUnit .cost {
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: var(--second-font-family);
   font-size: 1.6rem;
   font-weight: bold;
   position: absolute;
@@ -57,12 +59,12 @@
 
 .RentalUnit .description {
   padding: 1rem;
-  height: 18rem;
+  height: var(--rental-unit-description-height);
   position: relative;
 }
 
 .RentalUnit .title {
-  height: 5rem;
+  height: var(--rental-unit-title-height);
   font-size: 1.5rem;
   font-weight: bold;
   color: #494949;
@@ -75,12 +77,12 @@
 }
 
 .RentalUnit:hover .title {
-  color: #b881fc;
+  color: var(--main-color);
 }
 
 .RentalUnit .address {
   margin: 0.6rem 0rem;
-  height: 2.3rem;
+  height: var(--rental-unit-address-height);
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
@@ -88,8 +90,8 @@
   -webkit-box-orient: vertical;
 }
 
-.RentalUnit .additionInfo{
-  height: 4.7rem;
+.RentalUnit .additionInfo {
+  height: var(--rental-unit-addition-info-height);
   text-overflow: ellipsis;
   overflow: hidden;
   display: -webkit-box;
@@ -98,11 +100,11 @@
 }
 
 .RentalUnit .fa-map-marker-alt,
-.RentalUnit .fa-home, .RentalUnit .fa-file-invoice{
+.RentalUnit .fa-home,
+.RentalUnit .fa-file-invoice {
   width: 1.8rem;
   color: #b881fcb2;
 }
-
 
 .RentalUnit .comment {
   position: absolute;
@@ -111,26 +113,11 @@
   bottom: 1rem;
 }
 
-.RentalUnit .heart{
+.RentalUnit .heart {
   position: relative;
   left: 20rem;
   bottom: 3.5rem;
 }
-
-/* .RentalUnit .fa-heart {
-  font-size: 2rem;
-  color: #b881fc;
-  padding: 0.4rem;
-  border-radius: 50%;
-  transition: 0.3s;
-  position: relative;
-  z-index: 10;
-}
-
-.RentalUnit .fa-heart:hover {
-  background-color: #b881fc63;
-  transition: 0.3s;
-} */
 
 @media (max-width: 692px) {
   .RentalUnit {
