--- a/src/assets/css/detailRentalUnit.css
+++ b/src/assets/css/detailRentalUnit.css
@@ -114,6 +114,17 @@
   flex: 1;
 }
 
+.DetailRentalUnit .comment{
+  margin-top: 5rem;
+  margin-bottom: 3rem;
+  padding: 1rem 0;
+  box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.15);
+}
+
+.DetailRentalUnit .comment h2{
+  padding: 1rem;
+}
+
 @media (max-width: 500px) {
   .DetailRentalUnit .roomFeature .divTop {
     display: block;
