--- a/src/assets/css/createPost.css
+++ b/src/assets/css/createPost.css
@@ -11,6 +11,8 @@
 }
 
 .createPostForm {
+  overflow-x: scroll;
+  position: relative;
   background-color: white;
   border-radius: 0.8rem;
   width: 90vw;
@@ -20,8 +22,8 @@
   box-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.4);
 }
 
-.createPostTitle{
-  padding: 1rem 2rem;
+.createPostTitle {
+  padding-top: 0.5rem;
   margin-top: 1rem;
   text-align: center;
   color: rgb(78, 78, 78);
@@ -33,13 +35,19 @@
   color: rgb(100, 100, 100);
   padding: 1rem 2rem;
 }
-.createPostLabel input {
+.createPostLabel input,
+.createPostLabel select {
   font-size: 1.1rem;
   width: 100%;
   height: 2.5rem;
   border: 1px solid rgb(224, 224, 224);
   border-radius: 0.3rem;
 }
+
+.createPostForm .labelSelect {
+  margin-top: -1.5rem;
+}
+
 .createPostLabel:focus-within {
   color: var(--main-color);
   font-weight: 600;
@@ -49,7 +57,7 @@
 }
 
 .createPostFlex {
-  width: 100%;
+  width: calc(100% - 2rem);
   display: flex;
   justify-content: space-between;
   padding: 1rem 2rem;
@@ -64,7 +72,8 @@
   color: rgb(100, 100, 100);
   padding: 1rem 0;
 }
-.createPostLabel2 input {
+.createPostLabel2 input,
+.createPostLabel2 select {
   font-size: 1.1rem;
   width: 80%;
   height: 2.5rem;
@@ -80,8 +89,9 @@
 }
 
 .createPostLabel textarea {
-  height: 8rem;
+  height: 4rem;
   font-size: 1.1rem;
+  padding-top: 0;
   width: 100%;
   border: 1px solid rgb(224, 224, 224);
   border-radius: 0.3rem;
@@ -112,7 +122,7 @@
   transition: 0.2s;
 }
 
-.createPostErrorMessage{
+.createPostErrorMessage {
   color: red;
   font-size: 0.9rem;
 }
