--- a/src/assets/css/commentAlreadyExist.css
+++ b/src/assets/css/commentAlreadyExist.css
@@ -1,28 +1,28 @@
 @import 'config.css';
 
-.Comment {
+.CommentAlreadyExist {
   display: flex;
   align-items: center;
   border-top: 1px solid rgb(228, 228, 228);
 }
 
-.Comment img {
+.CommentAlreadyExist img {
   width: 5rem;
   height: 5rem;
   border-radius: 50%;
   padding: 1rem;
 }
 
-.Comment .right {
+.CommentAlreadyExist .right {
   padding: 1rem;
 }
 
-.Comment .username {
+.CommentAlreadyExist .username {
   font-size: 1.2rem;
   color: rgb(77, 77, 77);
   font-weight: 600;
 }
 
-.Comment .cmt {
+.CommentAlreadyExist .cmt {
   color: rgb(119, 119, 119);
 }
