--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -7,7 +7,6 @@
   padding-top: 2rem;
   padding-bottom: 2rem;
   overflow-y: hidden;
-
 }
 
 .LoginOrRegister .logoTop {
@@ -84,18 +83,21 @@
   margin-bottom: 0.3rem;
   font-size: 1.2rem;
   font-family: var(--second-font-family);
+  color: rgb(100, 100, 100);
+  color: #623499;
 }
-
-.LoginOrRegister input {
+.LoginOrRegister input,
+.LoginOrRegister select {
   width: 90%;
   max-width: 35rem;
-  height: 1.5rem;
+  height: 1.8rem;
   outline: none;
   font-size: 1.1rem;
   font-family: var(--second-font-family);
   border: none;
   border-bottom: 1px solid #cfcfcf;
   font-family: var(--second-font-family);
+  color: rgb(54, 54, 54);
 }
 
 .LoginOrRegister button {
@@ -104,6 +106,7 @@
   background-color: var(--main-color);
   border: none;
   color: white;
+  margin-top: 1.5rem;
   font-family: var(--second-font-family);
   font-size: 1.2rem;
   border-radius: 0.2rem;
@@ -154,6 +157,30 @@
   color: #52238b;
 }
 
+
+.LoginOrRegister .message {
+  color: red;
+  font-size: 0.9rem;
+}
+
+.LoginOrRegister .AutoAddress span {
+  display: block;
+  margin-left: 0;
+  margin-top: 1.5rem;
+}
+
+@media (max-width: 850px) {
+  .LoginOrRegister .bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .LoginOrRegister span {
+    margin: 0;
+    margin-top: 1.5rem;
+  }
+}
+
 @media (max-width: 700px) {
   .LoginOrRegister {
     display: block;
@@ -187,7 +214,7 @@
   .LoginOrRegister .chooseTypeAccount {
     display: flex;
     justify-content: center;
-    margin-top: 10rem;
+    margin-top: 8rem;
     flex: 1;
   }
 
@@ -197,25 +224,10 @@
   }
 
   .LoginOrRegister input,
-  .LoginOrRegister .row {
+  .LoginOrRegister .row,
+  .LoginOrRegister select {
     width: 80vw;
     max-width: unset;
   }
 }
 
-.LoginOrRegister .message{
-  color: red;
-  font-size: 0.9rem;
-}
-
-@media (max-width: 850px) {
-  .LoginOrRegister .bottom {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .LoginOrRegister span {
-    margin: 0;
-    margin-top: 1.5rem;
-  }
-}
