--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@
   outline: none;
   font-family: 'Roboto', sans-serif;
 }
+
+body{
+  overflow-x: hidden;
+}
 a{
   text-decoration: none;
   color: unset;
