--- a/src/assets/css/searchBar.css
+++ b/src/assets/css/searchBar.css
@@ -2,45 +2,54 @@
 
 .SearchBar {
   position: absolute;
-  bottom: 12rem;
-  flex-wrap: wrap;
-  width: calc(100vw -6rem);
-  margin: auto 3rem;
+  bottom: 8rem;
+  width: calc(100vw - 15px);
+}
+
+.SearchBar form {
+  padding: 1rem;
+  width: 85vw;
+  max-width: 55rem;
+  margin: auto;
   text-align: center;
   background-color: rgba(148, 148, 148, 0.5);
-  padding: 0.5rem;
 }
 
-.SearchBar input,
-#cost,
-#area,
-#type,
-.SearchBar button {
+.SearchBar select {
   padding: 0.8rem;
-  padding-left: 1.5rem;
-  margin-right: 0.8rem;
+  padding-left: 1rem;
+  margin: 0 0.8rem;
   border-radius: 0.2rem;
-  border: 1px solid #d1d1d1;
   font-family: var(--second-font-family);
   margin-bottom: 0.5rem;
+  border: 1px solid #c0c0c0a6;
 }
 
-.SearchBar input {
-  width: 15rem;
+.SearchBar .btn {
+  margin-top: 1.5rem;
 }
 
 .SearchBar button {
-  width: 8rem;
+  padding: 0.8rem 0;
+  text-align: center;
+  width: 47.9rem;
   padding-left: 0;
-  margin-right: 0;
   background-color: var(--main-color);
   color: white;
+  border: 1px solid #c0c0c0a6;
+  border-radius: 0.2rem;
   transition: 0.3s;
   cursor: pointer;
 }
-
 .SearchBar button:hover {
   background-color: #8d62c2;
+}
+.SearchBar .AutoAddress span {
+  display: none;
+}
+
+.SearchBar select {
+  width: 15rem;
 }
 
 .SearchBar option {
@@ -48,24 +57,22 @@
 }
 
 @media (max-width: 900px) {
-  .SearchBar input,
-  #cost,
-  #area,
-  #type,
+  .SearchBar select,
   .SearchBar button {
     display: block;
-    width: 90vw;
-    margin: auto 0;
+    width: 100%;
+    margin: auto;
     margin-bottom: 1rem;
-  }
-  .SearchBar input {
-    box-sizing: border-box;
   }
 
   .SearchBar {
     flex-direction: column;
     top: 2rem;
+    margin: 0;
     position: relative;
+  }
+
+  .SearchBar form {
     background-color: transparent;
   }
 }
@@ -74,5 +81,11 @@
   .SearchBar button {
     margin: auto;
     display: block;
+  }
+}
+
+@media (min-width: 1200px) {
+  .SearchBar {
+    bottom: 4rem;
   }
 }
