--- a/src/assets/css/createPost.css
+++ b/src/assets/css/createPost.css
@@ -33,19 +33,27 @@
 .createPostLabel,
 .createPostForm label {
   display: block;
-  color: rgb(100, 100, 100);
+  color: rgb(73, 73, 73);
   padding: 1rem 2rem;
 }
 .createPostForm label span {
   display: block;
 }
+.createPostLabel p{
+  font-size: 1.1rem;
+}
 .createPostForm input,
-.createPostForm select {
+.createPostForm select,.createPostForm textarea {
   font-size: 1.1rem;
   width: 100%;
   height: 2.5rem;
   border: 1px solid rgb(224, 224, 224);
   border-radius: 0.3rem;
+  /* padding-left: 0.5rem; */
+}
+
+.createPostForm input::placeholder, .createPostForm textarea::placeholder{
+  color: rgb(170, 170, 170);
 }
 
 .createPostForm .labelSelect {
@@ -60,6 +68,28 @@
   box-shadow: 0px 0px 6px 1px rgba(184, 129, 252, 0.555);
 }
 
+.createPostPrice{
+  display: flex;
+  align-items: center;
+}
+
+.createPostPrice .typeOfPrice p{
+ visibility: hidden;
+}
+
+.createPostPrice .flexLabel{
+  flex: 5;
+  padding-right: 0.5rem;
+}
+
+.createPostPrice .typeOfPrice label{
+  padding-left: 0;
+}
+.createPostPrice .slash{
+  font-size: 3rem;
+  padding: 1rem 0.5rem 0 0.5rem;
+  font-weight: lighter;
+}
 .createPostFlex {
   width: calc(100% - 2rem);
   display: flex;
@@ -71,7 +101,7 @@
   flex: 1;
 }
 
-.createPostLabel2 {
+.createPostFlex .createPostLabel2 {
   display: block;
   color: rgb(100, 100, 100);
   padding: 1rem 0;
@@ -79,7 +109,7 @@
 .createPostLabel2 input,
 .createPostLabel2 select {
   font-size: 1.1rem;
-  width: 80%;
+  width: 87%;
   height: 2.5rem;
   border: 1px solid rgb(224, 224, 224);
   border-radius: 0.3rem;
@@ -107,9 +137,11 @@
 
 .createPostContainerButton {
   padding: 1rem 2rem;
-  text-align: right;
+  display: flex;
+  justify-content: space-between;
+  transition: 0.2s;
 }
-.createPostButton {
+.createPostButton, .createPostButtonCancel {
   width: 10rem;
   height: 3rem;
   background-color: var(--main-color);
@@ -121,9 +153,19 @@
   transition: 0.2s;
 }
 
-.createPostButton:hover {
+.createPostButton:hover , .createPostButtonCancel:hover{
   background-color: #9a6ad4;
   transition: 0.2s;
+}
+
+.createPostContainer .notice{
+  position: relative;
+  background-color: white;
+  border-radius: 0.8rem;
+  width: 90vw;
+  height: 15rem;
+  max-width: 40rem;
+  box-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.4);
 }
 
 .createPostErrorMessage, .createPostForm .message {
